--- a/templates/afterbarcodescanned.html
+++ b/templates/afterbarcodescanned.html
@@ -63,6 +63,7 @@
             color: black;
             alignment: left;
             border: 2px solid #f44336;
+
         }
 
         .button2:hover {
@@ -73,16 +74,20 @@
     </style>
 </head>
 <body>
-<h3>Lütfen şişenizi hazneye yerleştirip "Tamam" butonuna basınız
+<h3 align="center">Lütfen şişenizi hazneye yerleştirip "Tamam" butonuna basınız
     <floating>...</floating>
 </h3>
-<h6 style="color:red">(Eğer kapak açılmadı ise "AÇ" butonuna basınız)</h6>
+<h6 align="center" style="color:red">(Eğer kapak açılmadı ise "AÇ" butonuna basınız)</h6>
 
-<form action="../closecover">
-    <button class="button1">Tamam</button>
-</form>
-<form action="../opencover" method="get">
-    <button class="button2">AÇ</button>
-</form>
+<div align="center">
+    <form style="display:inline-block;vertical-align: middle;" action="../closecover">
+        <button align="center" class="button1">Tamam</button>
+    </form>
+    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+    <form style="display:inline-block;vertical-align: middle;" action="../opencover">
+        <button class="button2">AÇ</button>
+    </form>
+</div>
+
 </body>
 </html>
