added some design features

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -39,6 +39,16 @@
             background-color: #4CAF50;
             color: white;
         }
+
+    </style>
+    <style>
+body {
+  background-image: url('../static/back.jpg');
+  background-repeat: no-repeat;
+    background-attachment: fixed;
+  background-size: cover;
+}
+
     </style>
     <script>
         function verifyConnection() {
@@ -55,6 +65,7 @@
                 }
             });
         }
+
     </script>
 
 </head>
@@ -64,6 +75,9 @@
 
 
 <div class="center">
+    <br>
+    <br>
+    <br>
     <h3> HOŞGELDİNİZ</h3>
     <p align="center">
         {{ address_street }} Street
