--- a/templates/afterbarcodescanned.html
+++ b/templates/afterbarcodescanned.html
@@ -72,11 +72,29 @@
         }
 
     </style>
+    <style>
+body {
+  background-image: url('../static/back.jpg');
+  background-repeat: no-repeat;
+    background-attachment: fixed;
+  background-size: cover;
+}
+</style>
 </head>
 <body>
-<h3 align="center">Lütfen şişenizi hazneye yerleştirip "Tamam" butonuna basınız
+<br>
+<br>
+<br>
+<br>
+<br>
+<div class="center">
+<h3>Lütfen şişenizi hazneye yerleştirip "Tamam" butonuna basınız
     <floating>...</floating>
 </h3>
+<br>
+<img src="../static/cover.gif" width="100px" height="60px" >
+</div>
+<br>
 <h6 align="center" style="color:red">(Eğer kapak açılmadı ise "AÇ" butonuna basınız)</h6>
 
 <div align="center">
