--- a/templates/afterconnection.html
+++ b/templates/afterconnection.html
@@ -8,14 +8,31 @@
     <script src="../static/bootstrap/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="../static/bootstrap/animation.js"></script>
+    <script>
+        function verifyScan() {
+            var settings = {
+                "async": true,
+                "crossDomain": true,
+                "url": "will be set after connection server implementation",
+                "method": "GET"
+            }
+
+            $.ajax(settings).done(function (response) {
+                if (response.length > 0) {
+                    window.location.href = '/scannedBarcode/' + response;
+                }
+            });
+        }
+
+
+    </script>
     <style>
 
-        floating {
+         floating {
             position: relative;
-            top: 12px;
-            display: inline-block;
+            top: 0px;
             -webkit-animation: bounce 0.3s ease infinite alternate;
-            font-size: 16px;
+            font-size: 24px;
             color: #123;
             text-align: center;
             align-content: center;
@@ -28,23 +45,66 @@
 
         @-webkit-keyframes bounce {
             100% {
-                top: -12px;
+                top: 6px;
             }
         }
 
+        .button {
+            background-color: #4CAF50; /* Green */
+            border: none;
+            color: white;
+            padding: 16px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            transition-duration: 0.4s;
+            cursor: pointer;
+        }
+
+        .button1 {
+            background-color: white;
+            color: black;
+            alignment: right;
+            border: 2px solid #4CAF50;
+        }
+
+        .button1:hover {
+            background-color: #4CAF50;
+            color: white;
+        }
 
     </style>
 
-
+<style>
+body {
+  background-image: url('../static/back.jpg');
+  background-repeat: no-repeat;
+    background-attachment: fixed;
+  background-size: cover;
+}
+</style>
 </head>
 
 <body>
+<br>
+<br>
+<br>
+<br>
+<br>
+
 <h1 style="color: green;text-align: center;"> Hoşgeldiniz, {{ user_name }} {{ user_surname }}</h1>
 <p style="text-align: center; font-size: 14px;">Güncel Bakiyeniz: {{ user_balance }}</p>
 <br>
 <div class="center">
+    <floating> Lütfen şişenizin barkodunu okutunuz</floating>
     <img src="../static/tenor.gif" width="80px" height="40px" align="center">
-    <floating> Lütfen şişenizin barkodunu okutunuz...</floating>
+</div>
+<br>
+<div align="center">
+    <h5 style="color: red"> Okuttuktan sonra Tamam butonuna basiniz</h5>
+    <button class="button1" onclick="verifyConnection()">Tamam</button>
 </div>
 </body>
 </html>
