--- a/templates/afterconnection.html
+++ b/templates/afterconnection.html
@@ -89,7 +89,7 @@
 </div>
 <div align="center">
     <h5 style="color: red"> Okuttuktan sonra Tamam butonuna basiniz</h5>
-    <button class="button1" onclick="verifyConnection()">Tamam</button>
+    <button class="button1" onclick="verifyScan()">Tamam</button>
 </div>
 </body>
 </html>
