some connection server configurations added

--- a/templates/afterconnection.html
+++ b/templates/afterconnection.html
@@ -13,7 +13,7 @@
             var settings = {
                 "async": true,
                 "crossDomain": true,
-                "url": "will be set after connection server implementation",
+                "url": "http://localhost:8080/connection/getScannedBarcode/{{ connected_user  }}/{{ automat_id }}",
                 "method": "GET"
             }
 
