--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -46,7 +46,7 @@
             var settings = {
                 "async": true,
                 "crossDomain": true,
-                "url": "will be set after connection server implementation",
+                "url": "http://localhost:8080/connection/getConnectedUser/{{ automat_id }}",
                 "method": "GET"
             }
 
