--- a/templates/successpage.html
+++ b/templates/successpage.html
@@ -3,27 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <title>Success</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="../static/bootstrap/jquery.min.js"></script>
+    <script src="../static/bootstrap/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+    <script src="../static/bootstrap/animation.js"></script>
+    <script>
+        function closeConnection() {
+            var settings = {
+                "async": true,
+                "crossDomain": true,
+                "url": "http://localhost:8080/connection/closeConnection/{{ connected_user }}",
+                "method": "POST"
+            }
+
+            $.ajax(settings).done(function (response) {
+                if (response.toString() === "Closed") {
+                    window.location.href = '/';
+                }
+            });
+        }
+
+
+    </script>
     <style>
-         .center {
+        .center {
             align-items: center;
+        }
+
+        .button {
+            background-color: #4CAF50; /* Green */
+            border: none;
+            color: white;
+            padding: 16px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            transition-duration: 0.4s;
+            cursor: pointer;
+        }
+
+        .button1 {
+            background-color: white;
+            color: black;
+            alignment: right;
+            border: 2px solid #4CAF50;
+        }
+
+        .button1:hover {
+            background-color: #4CAF50;
+            color: white;
+        }
+
+        .button2 {
+            background-color: white;
+            color: black;
+            alignment: left;
+            border: 2px solid #f44336;
+
+        }
+
+        .button2:hover {
+            background-color: #f44336;
+            color: white;
         }
     </style>
 </head>
 <body>
+
+
 <h1 style="color: white;background-color: green;text-align: center">Tebrikler</h1>
 <h4 style="text-align: center">Bir adet {{ bottle_type }} şişeyi <br>geri dönüşüme kazandırdınız.</h4>
-<h4 style="text-align: center">Yapmış olduğunuz katkıdan dolayı <br> {{ point }} puan kazandınız.</h4>
+<h4 style="text-align: center">{{ point }} puan kazandınız.</h4>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 <div style="display: inline-block;">
-    <p> Kazanmış olduğunuz puanı <br>hesabınıza eklemek için</p>
-    <button class="center">hesap</button>
+    <p> Yeni bir şişe okutmak için tıklayınız...</p>
+    <form action="../connected/{{ connected_user }}">
+        <button class="button1">Yeni İşlem</button>
+    </form>
 </div>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 <div class="center" style="display: inline-block;">
-    <p> Kazanmış olduğunuz puanı <br>bağış yapmak için</p>
-    <button >bağış</button>
+    <p> Bağlantıyı sonlandırmak için tıklayınız...</p>
+    <button class="button2" onclick="closeConnection()">Çıkış</button>
 </div>
 </body>
 </html>
