when recycle fails case is handled

--- a/templates/cannotconnectautomat.html
+++ b/templates/cannotconnectautomat.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>fasdfaf</title>
+    <title>Server Failure</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
     <script src="../static/bootstrap/jquery.min.js"></script>
