--- a/templates/failpage.html
+++ b/templates/failpage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Success</title>
+    <title>Fail</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="../static/bootstrap/jquery.min.js"></script>
     <script src="../static/bootstrap/bootstrap.min.js"></script>
@@ -74,6 +74,38 @@
 
             });
         }
+
+        function retryWithSameBarcode() {
+            var settings = {
+                "async": true,
+                "crossDomain": true,
+                "url": "http://localhost:8080/connections/closeOrNewTransaction/{{ connected_user }}/{{ automat_id }}/{{ barcode }}/1/3",
+                "method": "POST"
+            }
+
+            $.ajax(settings).done(function (response) {
+                if (response.toString() === "false") {
+                    window.location.href = "/closeCoverOnFail/{{ barcode }}";
+                } else {
+                    console.log(response.toString());
+                    counter++;
+                    if (counter < 5) {
+                        setTimeout(closeConnection, 1000);
+                    } else {
+                        alert("Bağlantınız Bulunmamaktadir!");
+                        window.location.href = '/';
+                    }
+                }
+            }).fail(function () {
+                if (counter < 5) {
+                    counter++;
+                    closeConnection()
+                } else {
+                    window.location.href = '/';
+                }
+
+            });
+        }
     </script>
     <style>
         .center {
@@ -109,10 +141,17 @@
 <body>
 
 
-<h1 style="color: white;background-color: green;text-align: center">Tebrikler</h1>
-<h4 style="text-align: center">Bir adet {{ bottle_type }} şişeyi <br>geri dönüşüme kazandırdınız.</h4>
-<h4 style="text-align: center">{{ point }} puan kazandınız.</h4>
+<h1 style="color: white;background-color: green;text-align: center">Üzgünüm</h1>
+<h4 style="text-align: center">Barkodunu okuttuğunuz şişe ve görüntü eşleşmemektedir.<br> Şişenizi hazneden alabilirsiniz. </h4>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<br>
+<br>
+<br>
+<div style="display: inline-block;">
+    <p> Aynı şişe için tekrar denemek için tıklayınız...</p>
+    <button class="button1" onclick="retryWithSameBarcode()">Tekrar Dene</button>
+</div>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 <div style="display: inline-block;">
     <p> Yeni bir şişe okutmak için tıklayınız...</p>
