--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -81,11 +81,11 @@
 <div class="center">
     <h3> HOŞGELDİNİZ</h3>
     <p align="center">
-        {{ address_street }} Street
-        <br>
-        No: {{ address_no }}
-        <br>
         {{ address_neighborhood }}
+        <br>
+        {{ address_district }}
+        <br>
+        {{ address_province }}
 
     </p>
     <br>
