servo optimizations & ip settings added

--- a/templates/failpage.html
+++ b/templates/failpage.html
@@ -15,7 +15,7 @@
             var settings = {
                 "async": true,
                 "crossDomain": true,
-                "url": "http://localhost:8080/connections/closeOrNewTransaction/{{ connected_user }}/{{ automat_id }}/{{ barcode }}/1/0",
+                "url": "http://192.168.1.6:8080/connections/closeOrNewTransaction/{{ connected_user }}/{{ automat_id }}/{{ barcode }}/1/0",
                 "method": "POST"
             }
 
@@ -47,7 +47,7 @@
             var settings = {
                 "async": true,
                 "crossDomain": true,
-                "url": "http://localhost:8080/connections/closeOrNewTransaction/{{ connected_user }}/{{ automat_id }}/{{ barcode }}/1/1",
+                "url": "http://192.168.1.6:8080/connections/closeOrNewTransaction/{{ connected_user }}/{{ automat_id }}/{{ barcode }}/1/1",
                 "method": "POST"
             }
 
@@ -79,7 +79,7 @@
             var settings = {
                 "async": true,
                 "crossDomain": true,
-                "url": "http://localhost:8080/connections/closeOrNewTransaction/{{ connected_user }}/{{ automat_id }}/{{ barcode }}/1/3",
+                "url": "http://192.168.1.6:8080/connections/closeOrNewTransaction/{{ connected_user }}/{{ automat_id }}/{{ barcode }}/1/3",
                 "method": "POST"
             }
 
