--- a/templates/successpage.html
+++ b/templates/successpage.html
@@ -15,7 +15,7 @@
             var settings = {
                 "async": true,
                 "crossDomain": true,
-                "url": "http://localhost:8080/connections/closeOrNewTransaction/{{ connected_user }}/{{ automat_id }}/{{ barcode }}/1/0",
+                "url": "http://192.168.1.6:8080/connections/closeOrNewTransaction/{{ connected_user }}/{{ automat_id }}/{{ barcode }}/1/0",
                 "method": "POST"
             }
 
@@ -47,12 +47,12 @@
             var settings = {
                 "async": true,
                 "crossDomain": true,
-                "url": "http://localhost:8080/connections/closeOrNewTransaction/{{ connected_user }}/{{ automat_id }}/{{ barcode }}/1/1",
+                "url": "http://192.168.1.6:8080/connections/closeOrNewTransaction/{{ connected_user }}/{{ automat_id }}/{{ barcode }}/1/1",
                 "method": "POST"
             }
 
             $.ajax(settings).done(function (response) {
-                if (response.toString() === "false") {
+                if (response.toString() === "true") {
                     window.location.href = "/connected/{{ connected_user }}";
                 } else {
                     console.log(response.toString());
