--- a/templates/cannotconnectautomat.html
+++ b/templates/cannotconnectautomat.html
@@ -14,7 +14,7 @@
             var settings = {
                 "async": true,
                 "crossDomain": true,
-                "url": "http://localhost:8080/rest/automats/automat1",
+                "url": "http://192.168.1.6:8080/rest/automats/automat1",
                 "method": "GET"
             }
             $.ajax(settings).done(function (response) {
