--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -47,7 +47,7 @@
             var settings = {
                 "async": true,
                 "crossDomain": true,
-                "url": "http://localhost:8080/connections/getConnectedUser/{{ automat_id }}",
+                "url": "http://192.168.1.6:8080/connections/getConnectedUser/{{ automat_id }}",
                 "method": "GET"
             }
 
