--- a/templates/successpage.html
+++ b/templates/successpage.html
@@ -10,7 +10,71 @@
     <script src="../static/bootstrap/animation.js"></script>
     <script>
         counter = 0;
+        ctr = 0;
 
+        function waitForResultandClose() {
+            var settings = {
+                "async": true,
+                "crossDomain": true,
+                "url": "http://192.168.1.8:8080/connections/waitingForResult/automat1",
+                "method": "GET"
+            }
+
+            $.ajax(settings).done(function (response) {
+                if (response.toString() === "true") {
+                    window.location.href = "/";
+                } else {
+                    if(ctr<5){
+                        ctr++;
+                        setTimeout(waitForResultandClose,1000);
+                    }
+                    else{
+                        alert("Mobil cihazınızın internet bağlantısını kontrol ediniz.");
+
+                    }
+                }
+            }).fail(function () {
+                    if(ctr<5){
+                        ctr++;
+                        setTimeout(waitForResultandClose,1000);
+                    }
+                    else{
+                        window.location.href = "/";
+                    }
+            });
+        }
+
+        function waitForResultandNewTr() {
+            var settings = {
+                "async": true,
+                "crossDomain": true,
+                "url": "http://192.168.1.8:8080/connections/waitingForResult/automat1",
+                "method": "GET"
+            }
+
+            $.ajax(settings).done(function (response) {
+                if (response.toString() === "true") {
+                    window.location.href = "/connected/maymayan@etu.edu.tr";
+                } else {
+                    if(ctr<5){
+                        ctr++;
+                        setTimeout(waitForResultandNewTr,1000);
+                    }
+                    else{
+                        alert("Mobil cihazınızın internet bağlantısını kontrol ediniz.");
+
+                    }
+                }
+            }).fail(function () {
+                    if(ctr<5){
+                        ctr++;
+                        setTimeout(waitForResultandNewTr,1000);
+                    }
+                    else{
+                        window.location.href = "/";
+                    }
+            });
+        }
         function closeConnection() {
             var settings = {
                 "async": true,
@@ -21,9 +85,8 @@
 
             $.ajax(settings).done(function (response) {
                 if (response.toString() === "true") {
-                    window.location.href = '/';
+                    waitForResultandClose();
                 } else {
-                    console.log(response.toString());
                     counter++;
                     if (counter < 5) {
                         setTimeout(closeConnection, 1000);
@@ -35,11 +98,10 @@
             }).fail(function () {
                 if (counter < 5) {
                     counter++;
-                    closeConnection()
+                    setTimeout(closeConnection, 1000);
                 } else {
                     window.location.href = '/';
                 }
-
             });
         }
 
@@ -53,12 +115,13 @@
 
             $.ajax(settings).done(function (response) {
                 if (response.toString() === "true") {
-                    window.location.href = "/connected/{{ connected_user }}";
+                    waitForResultandNewTr();
+
                 } else {
-                    console.log(response.toString());
-                    counter++;
                     if (counter < 5) {
-                        setTimeout(closeConnection, 1000);
+                        counter++;
+                        setTimeout(newTransaction, 1000);
+
                     } else {
                         alert("Bağlantınız Bulunmamaktadir!");
                         window.location.href = '/';
@@ -67,7 +130,7 @@
             }).fail(function () {
                 if (counter < 5) {
                     counter++;
-                    closeConnection()
+                    setTimeout(newTransaction, 1000);
                 } else {
                     window.location.href = '/';
                 }
@@ -112,16 +175,15 @@
 <h1 style="color: white;background-color: green;text-align: center">Tebrikler</h1>
 <h4 style="text-align: center">Bir adet {{ bottle_type }} şişeyi <br>geri dönüşüme kazandırdınız.</h4>
 <h4 style="text-align: center">{{ point }} puan kazandınız.</h4>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 <div style="display: inline-block;">
-    <p> Yeni bir şişe okutmak için tıklayınız...</p>
-    <button class="button1" onclick="newTransaction()">Yeni İşlem</button>
+    <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Yeni bir şişe okutmak <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;için tıklayınız...</p>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button class="button1" onclick="newTransaction()">Yeni İşlem</button>
 </div>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 <div class="center" style="display: inline-block;">
-    <p> Bağlantıyı sonlandırmak için tıklayınız...</p>
+    <p> Bağlantıyı sonlandırmak<br> için tıklayınız...</p>
     <button class="button2" onclick="closeConnection()">Çıkış</button>
 </div>
 </body>
