some design improvements

--- a/templates/failpage.html
+++ b/templates/failpage.html
@@ -237,7 +237,7 @@
 <body>
 
 
-<h1 style="color: white;background-color: green;text-align: center">Üzgünüm</h1>
+<h1 style="text-align: center"><img src="../static/cross.png" width="50" height="50"> <br>Üzgünüm</h1>
 <h4 style="text-align: center">Barkodunu okuttuğunuz şişe ve görüntü eşleşmemektedir.<br> Şişenizi hazneden alabilirsiniz. </h4>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <br>
