--- a/templates/cannotconnectautomat.html
+++ b/templates/cannotconnectautomat.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
     <script src="../static/bootstrap/jquery.min.js"></script>
     <script src="../static/bootstrap/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:700,900" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="../css/font-awesome.min.css"/>
+    <link type="text/css" rel="stylesheet" href="../css/style.css"/>
     <script>
         function f() {
             ctr = 0;
@@ -29,12 +32,17 @@
 </head>
 
 <body onload="f()">
-<h1 style="color: white;background-color: red;text-align: center">Özür Dilerim</h1>
-<br>
-<br>
-<br>
-<p style="text-align: center">Otomatımız şu anda <br> hizmet verememektedir</p>
 
+<div id="notfound">
+    <div class="notfound-bg"></div>
+    <div class="notfound">
+        <h1 style="color: white;text-align: center">Üzgünüm</h1>
+        <br>
+        <br>
+        <br>
+        <h2>Otomatımız şu anda <br> hizmet verememektedir</h2>
+    </div>
+</div>
 </body>
 
 
