--- a/templates/successpage.html
+++ b/templates/successpage.html
@@ -172,7 +172,7 @@
 <body>
 
 
-<h1 style="color: white;background-color: green;text-align: center">Tebrikler</h1>
+<h1 style="text-align: center"><img src="../static/greentick.png" width="50" height="50"> <br>Tebrikler </h1>
 <h4 style="text-align: center">Bir adet {{ bottle_type }} şişeyi <br>geri dönüşüme kazandırdınız.</h4>
 <h4 style="text-align: center">{{ point }} puan kazandınız.</h4>
 
