--- a/templates/failpage.html
+++ b/templates/failpage.html
@@ -12,6 +12,45 @@
         counter = 0;
         ctr = 0;
 
+        function sr() {
+            var SpeechRecognition = SpeechRecognition || webkitSpeechRecognition
+            var SpeechGrammarList = SpeechGrammarList || webkitSpeechGrammarList
+            var SpeechRecognitionEvent = SpeechRecognitionEvent || webkitSpeechRecognitionEvent
+
+            var recognition = new SpeechRecognition();
+            var speechRecognitionList = new SpeechGrammarList();
+            recognition.grammars = speechRecognitionList;
+            recognition.continuous = true;
+            recognition.lang = 'tr-tr';
+            recognition.interimResults = false;
+
+            recognition.start();
+
+            recognition.onresult = function (event) {
+                console.log(event.results[0][0].transcript);
+                if(event.results[0][0].transcript.toString().toLowerCase()=="yeni işlem"){
+                    newTransaction();
+                }else if(event.results[0][0].transcript.toString().toLowerCase().includes("kapa")){
+                    closeConnection();
+                }else if(event.results[0][0].transcript.toString().toLowerCase().includes("tekrar")){
+                    retryWithSameBarcode();
+                }else{
+                    sr();
+                }
+            }
+
+            recognition.onspeechend = function (event) {
+                    recognition.stop();
+            }
+
+            recognition.onnomatch = function (event) {
+                sr();
+            }
+
+            recognition.onerror = function (event) {
+                sr();
+            }
+        }
         function waitForResultandClose() {
             var settings = {
                 "async": true,
