--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -90,7 +90,7 @@
     </p>
     <br>
 </div>
-<img align="right" src="./static/qrcode.png" width="50" height="50">
+<img align="right" src="./static/qrcode.svg" width="50" height="50">
 
 
 <div align="right">
