heroku deployment has been adapted

--- a/templates/successpage.html
+++ b/templates/successpage.html
@@ -55,7 +55,7 @@
             var settings = {
                 "async": true,
                 "crossDomain": true,
-                "url": "http://192.168.1.8:8080/connections/waitingForResult/automat1",
+                "url": "http://recyclingprojectsirius.herokuapp.com/connections/waitingForResult/automat1",
                 "method": "GET"
             }
 
@@ -87,7 +87,7 @@
             var settings = {
                 "async": true,
                 "crossDomain": true,
-                "url": "http://192.168.1.8:8080/connections/waitingForResult/automat1",
+                "url": "http://recyclingprojectsirius.herokuapp.com/connections/waitingForResult/automat1",
                 "method": "GET"
             }
 
@@ -118,7 +118,7 @@
             var settings = {
                 "async": true,
                 "crossDomain": true,
-                "url": "http://192.168.1.6:8080/connections/closeOrNewTransaction/{{ connected_user }}/{{ automat_id }}/{{ barcode }}/1/0",
+                "url": "http://recyclingprojectsirius.herokuapp.com/connections/closeOrNewTransaction/{{ connected_user }}/{{ automat_id }}/{{ barcode }}/1/0",
                 "method": "POST"
             }
 
@@ -148,7 +148,7 @@
             var settings = {
                 "async": true,
                 "crossDomain": true,
-                "url": "http://192.168.1.6:8080/connections/closeOrNewTransaction/{{ connected_user }}/{{ automat_id }}/{{ barcode }}/1/1",
+                "url": "http://recyclingprojectsirius.herokuapp.com/connections/closeOrNewTransaction/{{ connected_user }}/{{ automat_id }}/{{ barcode }}/1/1",
                 "method": "POST"
             }
 
