--- a/templates/afterconnection.html
+++ b/templates/afterconnection.html
@@ -16,7 +16,7 @@
             var settings = {
                 "async": true,
                 "crossDomain": true,
-                "url": "http://192.168.1.6:8080/connections/getScannedBarcode/{{ connected_user  }}/{{ automat_id }}",
+                "url": "http://recyclingprojectsirius.herokuapp.com/connections/getScannedBarcode/{{ connected_user  }}/{{ automat_id }}",
                 "method": "GET"
             }
 
