--- a/templates/failpage.html
+++ b/templates/failpage.html
@@ -55,7 +55,7 @@
             var settings = {
                 "async": true,
                 "crossDomain": true,
-                "url": "http://192.168.1.2:8080/connections/waitingForResult/automat1",
+                "url": "http://recyclingprojectsirius.herokuapp.com/connections/waitingForResult/automat1",
                 "method": "GET"
             }
 
@@ -87,7 +87,7 @@
             var settings = {
                 "async": true,
                 "crossDomain": true,
-                "url": "http://192.168.1.2:8080/connections/waitingForResult/automat1",
+                "url": "http://recyclingprojectsirius.herokuapp.com/connections/waitingForResult/automat1",
                 "method": "GET"
             }
 
@@ -119,7 +119,7 @@
             var settings = {
                 "async": true,
                 "crossDomain": true,
-                "url": "http://192.168.1.2:8080/connections/waitingForResult/automat1",
+                "url": "http://recyclingprojectsirius.herokuapp.com/connections/waitingForResult/automat1",
                 "method": "GET"
             }
 
@@ -151,7 +151,7 @@
             var settings = {
                 "async": true,
                 "crossDomain": true,
-                "url": "http://192.168.1.2:8080/connections/closeOrNewTransaction/{{ connected_user }}/{{ automat_id }}/{{ barcode }}/0/0",
+                "url": "http://recyclingprojectsirius.herokuapp.com/connections/closeOrNewTransaction/{{ connected_user }}/{{ automat_id }}/{{ barcode }}/0/0",
                 "method": "POST"
             }
 
@@ -181,7 +181,7 @@
             var settings = {
                 "async": true,
                 "crossDomain": true,
-                "url": "http://192.168.1.2:8080/connections/closeOrNewTransaction/{{ connected_user }}/{{ automat_id }}/{{ barcode }}/0/1",
+                "url": "http://recyclingprojectsirius.herokuapp.com/connections/closeOrNewTransaction/{{ connected_user }}/{{ automat_id }}/{{ barcode }}/0/1",
                 "method": "POST"
             }
 
@@ -214,7 +214,7 @@
             var settings = {
                 "async": true,
                 "crossDomain": true,
-                "url": "http://192.168.1.2:8080/connections/closeOrNewTransaction/{{ connected_user }}/{{ automat_id }}/{{ barcode }}/0/3",
+                "url": "http://recyclingprojectsirius.herokuapp.com/connections/closeOrNewTransaction/{{ connected_user }}/{{ automat_id }}/{{ barcode }}/0/3",
                 "method": "POST"
             }
 
