--- a/templates/successpage.html
+++ b/templates/successpage.html
@@ -69,7 +69,7 @@
                     }
                     else{
                         alert("Mobil cihazınızın internet bağlantısını kontrol ediniz.");
-
+                        window.location.href ="/";
                     }
                 }
             }).fail(function () {
@@ -101,7 +101,7 @@
                     }
                     else{
                         alert("Mobil cihazınızın internet bağlantısını kontrol ediniz.");
-
+                        window.location.href ="/";
                     }
                 }
             }).fail(function () {
